# surrealdb-spike

./: .gitignore  Cargo.toml  README.md
checklist/: Cargo.toml
checklist/src/: lib.rs  schema.surreal
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
ffi/: Cargo.toml  README.md
ffi/src/: checklist.rs  error.rs  item.rs  lib.rs  marc.rs
