[package]
name = "checklist"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = [
    "from",
    "into",
    "deref",
    "constructor",
    "display",
    "from_str",
] }
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
thiserror = "2.0.11"
