[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "checklist_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = []
uniffi = ["dep:uniffi"]
uniffi-cli = ["uniffi", "uniffi/cli"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[dependencies]
checklist = { version = "0.1.0", path = "../checklist" }
thiserror = "2.0.11"
uniffi = { version = "0.29.0", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
